ADD: Rotation Puzzle

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Engine/Maps/Templates/OpenWorld
 GlobalDefaultGameMode=/Game/BP/BP_GameMode.BP_GameMode_C
+EditorStartupMap=/Game/Map/HealthTest.HealthTest
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
